workloads/vizzini/deployment-lichess.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lichess-vizzini
  namespace: vizzini
  labels:
    app: lichess-vizzini
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lichess-vizzini
  template:
    metadata:
      labels:
        app: lichess-vizzini
    spec:
      containers:
        - name: lichess-vizzini
          image: ghcr.io/dannylongeuay/vizzini
          args:
            - lichess
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
