workloads/vizzini/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vizzini
  namespace: vizzini
  labels:
    app: vizzini
spec:
  selector:
    app: vizzini
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
