workloads/vizzini/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vizzini
  namespace: vizzini
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - vizzini.cyberdan.dev
  rules:
    - backendRefs:
        - name: vizzini
          port: 80
